--- a/PixelCity/Base.lproj/Main.storyboard
+++ b/PixelCity/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -13,16 +13,79 @@
         <!--MapVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="MapVC" customModule="PixelCity" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsUserLocation="YES" showsCompass="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KUM-Gz-0kc">
+                                <rect key="frame" x="0.0" y="20" width="414" height="715"/>
+                            </mapView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="639-NQ-vG1" userLabel="topView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Double-tap to drop a pin." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LTC-Ij-C2l">
+                                        <rect key="frame" x="20" y="46" width="374" height="29"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="21"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96470588235294119" green="0.65098039215686276" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="0nL-S2-EfA"/>
+                                    <constraint firstItem="LTC-Ij-C2l" firstAttribute="leading" secondItem="639-NQ-vG1" secondAttribute="leading" constant="20" id="K1z-ZQ-xib"/>
+                                    <constraint firstAttribute="bottom" secondItem="LTC-Ij-C2l" secondAttribute="bottom" constant="15" id="mt3-BJ-u05"/>
+                                    <constraint firstItem="LTC-Ij-C2l" firstAttribute="top" secondItem="639-NQ-vG1" secondAttribute="top" constant="46" id="rrV-6A-DsY"/>
+                                    <constraint firstAttribute="trailing" secondItem="LTC-Ij-C2l" secondAttribute="trailing" constant="20" id="xFc-3Y-7h7"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2VW-d6-YQK">
+                                <rect key="frame" x="351" y="661" width="55" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="55" id="4G6-1Z-Nai"/>
+                                    <constraint firstAttribute="height" constant="55" id="ncq-Qb-9RQ"/>
+                                </constraints>
+                                <state key="normal" image="locationButton"/>
+                                <connections>
+                                    <action selector="centerMapButtonWasPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dXP-lw-tmp"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nPS-E1-Vd2">
+                                <rect key="frame" x="0.0" y="735" width="414" height="0.0"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="nPS-E1-Vd2" secondAttribute="height" multiplier="414:1" id="Fxe-zI-Qlr"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2VW-d6-YQK" secondAttribute="bottom" constant="20" id="4BG-9r-d4h"/>
+                            <constraint firstItem="639-NQ-vG1" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="4yQ-zM-nyK"/>
+                            <constraint firstItem="KUM-Gz-0kc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="54O-Vo-Auf"/>
+                            <constraint firstItem="KUM-Gz-0kc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OVW-cu-MCs"/>
+                            <constraint firstItem="KUM-Gz-0kc" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WbG-A7-KYC"/>
+                            <constraint firstItem="639-NQ-vG1" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="d66-iY-QQe"/>
+                            <constraint firstItem="nPS-E1-Vd2" firstAttribute="top" secondItem="KUM-Gz-0kc" secondAttribute="bottom" id="dQJ-nE-Hv5"/>
+                            <constraint firstItem="639-NQ-vG1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ntd-yr-l5d"/>
+                            <constraint firstAttribute="trailing" secondItem="nPS-E1-Vd2" secondAttribute="trailing" id="sTg-an-J6a"/>
+                            <constraint firstAttribute="bottom" secondItem="nPS-E1-Vd2" secondAttribute="bottom" id="t3s-ff-AFj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2VW-d6-YQK" secondAttribute="trailing" constant="8" id="tSj-wU-eHX"/>
+                            <constraint firstItem="nPS-E1-Vd2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wYr-iW-Q8g"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="KUM-Gz-0kc" id="Zp7-oR-coz"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="132.88043478260872"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="locationButton" width="67" height="67"/>
+    </resources>
 </document>
